--- a/TantranshSolutions/package.json
+++ b/TantranshSolutions/package.json
@@ -1,5 +1,6 @@
 {
   "name": "tantranshsolutions",
+  "homepage": "http://tantranshsolutions.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
